--- a/Agents_game.csproj
+++ b/Agents_game.csproj
@@ -43,8 +43,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Create_agent_junior.cs" />
+    <Compile Include="Create_Sensor_basic.cs" />
+    <Compile Include="dict_sensor.cs" />
+    <Compile Include="Game.cs" />
+    <Compile Include="Agent.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Sensor.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
