--- a/Agents_game.csproj
+++ b/Agents_game.csproj
@@ -43,8 +43,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Create_agent_junior.cs" />
-    <Compile Include="Create_Sensor_basic.cs" />
+    <Compile Include="agent_junior.cs" />
+    <Compile Include="Sensor_basic.cs" />
     <Compile Include="Game.cs" />
     <Compile Include="Agent.cs" />
     <Compile Include="Program.cs" />
