--- a/Agents_game.csproj
+++ b/Agents_game.csproj
@@ -44,6 +44,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="agent_junior.cs" />
+    <Compile Include="pulse sensor.cs" />
     <Compile Include="Sensor_basic.cs" />
     <Compile Include="Game.cs" />
     <Compile Include="Agent.cs" />
